--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!-- app.component.html -->
 <app-header></app-header>
-<app-list-suggestion></app-list-suggestion>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
 <app-footer></app-footer>
