--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,9 +1,20 @@
-<header class="app-header">
-  <div class="header-content">
-    <h1 class="brand">Campus Ideas</h1>
-    <nav class="nav-menu">
-      <a href="#" class="nav-link">Accueil</a>
-      <a href="#" class="nav-link active">Suggestions</a>
-    </nav>
-  </div>
+<header>
+  <nav>
+    <div class="logo">
+      <a routerLink="/home">SuggestionApp</a>
+    </div>
+    
+    <ul class="nav-links">
+      <li>
+        <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+          Home
+        </a>
+      </li>
+      <li>
+        <a routerLink="/listSuggestion" routerLinkActive="active">
+          Suggestions
+        </a>
+      </li>
+    </ul>
+  </nav>
 </header>
